--- a/design.css
+++ b/design.css
@@ -26,7 +26,7 @@ body
     text-align: center;
     margin:15px;
     background-color:#fff;
-    color:#000;
+    color:#333;
     border-radius:5px;
     padding:15px;
 }
@@ -38,7 +38,7 @@ body
     text-align: center;
     margin:15px;
     background-color:#fff;
-    color:#000;
+    color:#333;
     border-radius:5px;
     padding:15px;
 }
@@ -50,7 +50,7 @@ body
     text-align: center;
     margin:15px;
     background-color:#fff;
-    color:#000;
+    color:#333;
     border-radius:5px;
     padding:15px;
 }
@@ -73,11 +73,11 @@ body
     font-size:12px;
 }
 
-button:hover
+.btn:hover
 {
     color:#c7a6a6;
 }
-button
+.btn
 {
     font-weight: 900;
     background-color:#fff;
@@ -89,4 +89,21 @@ button
     text-align:center;
     outline:none;
     width:50%;
+}
+
+#backup
+{
+    padding:5px;
+}
+
+#restore
+{
+    padding:5px;
+}
+
+.top
+{
+    background-color:#999;
+    padding:15px;
+    color:#fff;
 }
