--- a/design.css
+++ b/design.css
@@ -86,6 +86,19 @@ body
     font-size:32px;
 }
 
+#download
+{
+    background-image: url("icons/download.png");
+    background-repeat: no-repeat;
+    background-position: center; 
+    width: 90px;
+    height:90px;
+    margin:15px;
+    outline:none;
+    border:1px solid #eee;
+    border-radius:50%;
+    display: inline-block;
+}
 #add
 {
     background-image: url("icons/add.png");
@@ -114,6 +127,11 @@ body
     display: inline-block;
 }
 
+#download:hover
+{
+    cursor: pointer;
+    border:1px solid greenyellow;
+}
 #remove:hover
 {
     cursor: pointer;
