--- a/design.css
+++ b/design.css
@@ -1,6 +1,6 @@
 body
 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: sans-serif;
     margin: 0;
     padding: 15px;
     border: none;
