--- a/design.css
+++ b/design.css
@@ -133,10 +133,6 @@ h3
 */
 details{
     margin:5px;
-    position: absolute;
-    top:0;
-    left:0;
-
     padding:15px;
     display:inline;
     border:1px solid #999;
@@ -153,4 +149,8 @@ details > p{
 }
 details > p:hover{
     background-color:#ccc;
+}
+small
+{
+    color:#999;
 }
