--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ details{
     	border:none;
     	border-bottom:6px solid #f37636;
     	cursor:pointer;
-	background-color:;
     	color:#fff;
     	user-select: none;
 	font-weight: 900;
@@ -35,9 +34,9 @@ details > p:hover{
 	box
 */
 .createBox{
+	flex:1fr;
 	min-height:100px;
 	background-color:#111;
-	max-width:90vw;
 }
 .main{
 	display:flex;
@@ -53,6 +52,8 @@ details > p:hover{
 	text-align:center;
 }
 .createText{
+	height:auto;
+	width:auto;
 	font-size:14px;
 	word-break:break-word;
 	outline:none;
@@ -85,7 +86,6 @@ details > p:hover{
 	font-size:2.1em;
 	color:#ffffff;
 	font-weight: 900;
-	/*background: linear-gradient(0.45turn,#ab2aff,#f37636);*/
 	background: linear-gradient(0.25turn,#ab2aff,#000000,#f37636);
 }
 pre
@@ -95,3 +95,23 @@ pre
 	color:#b716e3;
 	opacity:0.3;
 }
+.btn:hover
+{
+	background-color:orange;
+}
+.btn
+{
+	text-align:center;
+	margin:5px;
+	padding:5px;
+	border:none;
+	outline:none;
+	color:#fff;
+	background-color:green;
+	border-radius:3px;
+}
+.createButtons
+{
+	text-align:center;
+}
+	
