--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,22 @@ body{
 	color:#000;
 }
 
+#color::-moz-color-swatch {
+	border-radius: 50%;
+	border: none;
+}
+#color::-webkit-color-swatch {
+	border-radius: 50%;
+	border: none;
+  }
+#color{
+	background-color: #eee;
+	border:none;
+	outline:none;
+	height:75px;
+	width:75px;
+}
+
 header{
 	background-color: #333;
 	color:#eee;
