--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*
-	https://github.com/lobossl/
+	https://github.com/lobossl/todo/
 */
 a{
 	color:#fff;
@@ -15,21 +15,18 @@ body{
 	color:#000;
 }
 
+/* boxColor */
 #color::-moz-color-swatch {
-	border-radius: 50%;
+	border-radius: 9px;
 	border: none;
+	padding:15px;
 }
 #color::-webkit-color-swatch {
-	border-radius: 50%;
+	border-radius: 9px;
 	border: none;
+	padding:15px;
   }
-#color{
-	background-color: #eee;
-	border:none;
-	outline:none;
-	height:75px;
-	width:75px;
-}
+/* End of boxColor */
 
 header{
 	background-color: #333;
@@ -154,12 +151,10 @@ footer{
 }
 
 .input-def{
-	width:50%;
 	outline:none;
 	padding:15px;
 	border:1px solid #ccc;
 	background-color: #fff;
-	margin:15px;
 	color:#999;
 }
 
@@ -167,7 +162,6 @@ footer{
 	outline:none;
 	padding:15px;
 	border:none;
-	margin:15px;
 	border:1px solid #ccc;
 	background-color: #fff;
 	color:#999;
