--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,13 @@ body{
 	margin:0;
 }
 
+.radius-min{
+	border-radius:6px;
+}
 .radius-def{
+	border-radius:10px;
+}
+.radius-max{
 	border-radius:20px;
 }
 
